After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790458 - Cursor disappears after typing Ctrl+F7
Cursor disappears after typing Ctrl+F7
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: editor
Flatpak Nightly Channel
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-11-16 18:25 UTC by elias
Modified: 2017-11-18 08:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
workbench: capture Control+F7 before widget dispatch (1.48 KB, patch)
2017-11-18 08:46 UTC, Christian Hergert
committed Details | Review

Description elias 2017-11-16 18:25:46 UTC
If I open a file and press Ctrl+F7 to build the program, the cursor disappears.
I can still type in the file but without being able to see the cursor.
This only happens when I use the shortcut. Clicking the button with mouse does not cause this problem.
Comment 1 Christian Hergert 2017-11-18 07:13:39 UTC
Looks like the first issue is that the global keybinding isn't activating. The second issue is that F7 is a fairly unknown feature of GtkTextView, in that F7 toggles cursor visibility.
Comment 2 Christian Hergert 2017-11-18 08:46:32 UTC
Created attachment 363964 [details] [review]
workbench: capture Control+F7 before widget dispatch

For some reason, gtkbindingset is activating our event for
Ctrl+F7 as the F7 action. A workaround for now, is to just
capture it before the event propagates to the target widget.

F7 continues to work to toggle the visibility of the caret in
the textview.
Comment 3 Christian Hergert 2017-11-18 08:47:24 UTC
Attachment 363964 [details] pushed as 109f4f5 - workbench: capture Control+F7 before widget dispatch