workbench: capture Control+F7 before widget dispatch

For some reason, gtkbindingset is activating our event for
Ctrl+F7 as the F7 action. A workaround for now, is to just
capture it before the event propagates to the target widget.

F7 continues to work to toggle the visibility of the caret in
the textview.

https://bugzilla.gnome.org/show_bug.cgi?id=790458